# codex-seo-tasks

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Codex Shopify Standard SEO Spider Config.seospiderconfig  README.md  pyproject.toml
.claude/: monday-mcp.sh
config/: site-access.json
docs/: acorn-fault-articles-remaining-briefs-2026-05-19.json  acorn-lane-change-accident-article-2026-05-19.html  acorn-lane-change-accident-review-doc-2026-05-19.html  acorn-lane-change-accident-validation-2026-05-19.json  acorn-location-pages-performance-2026-05-19.json  acorn-location-pages-performance-check-2026-05-19.md  acorn-location-pages-review-2026-05-19.md  acorn-location-pages-review-raw-2026-05-19.json  acorn-merging-accident-pilot-2026-05-19.html  acorn-merging-accident-pilot-brief-2026-05-19.json  acorn-merging-accident-pilot-validation-2026-05-19.json  acorn-rear-end-collision-article-2026-05-19.html  acorn-rear-end-collision-review-doc-2026-05-19.html  acorn-rear-end-collision-validation-2026-05-19.json  acorn-remaining-fault-articles-review-2026-05-19.html  acorn-service-area-pages-audit-2026-05-19.json  acorn-t-bone-accident-article-2026-05-19.html  acorn-t-bone-accident-review-doc-2026-05-19.html  acorn-t-bone-accident-validation-2026-05-19.json  client-folder-map.json  melani-collections-crawl.json  melani-collections-full.json  melani-competitor-scrape-2026-05-09.json  melani-keyword-quality-repair-2026-05-11.md  melani-midi-dresses-keyword-research-2026-05-14.md  melani-midi-dresses-page-copy-2026-05-14.md  melani-serp-scrape-2026-05-10.json  (+13 more)
(+165 files in other folders)
